samples/_failures_safe/1761607597_447361_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7009996.c: In function ‘main’:
./samples/SAFE/__tmp_e7009996.c:149:16: error: missing terminating " character
  149 |         printf("No words found
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e7009996.c:149:9: error: expected expression at end of input
  149 |         printf("No words found
      |         ^~~~~~
./samples/SAFE/__tmp_e7009996.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7009996.c:149:9: error: expected declaration or statement at end of input
